Trivial Test Change
Like the title says really

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,5 +4,5 @@
 {% if recipe %}
   <h2>Recipe Name: {{ recipe.name }}</h2>
 {% else %}
-  <h2>Haven't got a recipe :-(</h2>
+  <h2>Error: No Recipes Found</h2>
 {% endif %}
