--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -3,9 +3,16 @@
 <body>
   <h2>{{recipe.name}}</h2>
   <h3>{{recipe.description}}</h3>
+  <h4>Ingredients</h4>
   <ul>
     {% for ingredient in recipe.ingredients %}
       <li>{{ingredient}}</li>
     {% endfor %}
   </ul>
+  <h4>Steps</h4>
+  <ol>
+    {% for step in recipe.steps %}
+      <li>{{step}}</li>
+    {% endfor %}
+  </ol>
 </body>
